welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	while(aSmile==bSmile){
		return true; 
	} 
	while(aSmile!=bSmile){
		return true;
	}
}
